fix: Spacing bug in online services page

--- a/content/sass/pages/online-services.scss
+++ b/content/sass/pages/online-services.scss
@@ -3,8 +3,8 @@
 @use '../variables/type-vars' as *;
 
 
-.intro {
-    padding-block: var(--section-spacing-large) 0;
+main {
+    padding: var(--section-spacing-large) var(--horizontal-padding);
 }
 
 
